style.css
* {
    box-sizing:border-box;
    /* width: 80%;
    margin: 0 auto; */
}

body {
    width:100%;
    text-align: center;
    /* font-size:20px; */
    font-family:Helvetica,sans-serif;
    font-weight:100;
    padding: 40px;
    color:hotpink;
    background-color:rgb(197, 197, 197);
    /* margin: 0 auto; */
}

.sidebar1 {
    height: 100%;
    width: 100px;
    position: absolute;
    left: 0;
    top: 0;
    padding-top: 40px;
    background-color: lightblue;
    }

.sidebar2 {
    height: 100%;
    width: 100px;
    position: absolute;
    right: 0;
    top: 0;
    padding-top: 40px;
    background-color: lightblue;
    }

h1, h2 {
	color:#F67EA1;
    text-align:center;
}

h1 {
	font-size: 50px;
    padding:20px;
	/* background-color:#10aca6 */
}

h2 {
	font-size: 30px;
}

img {
	height:auto;
	width:100%;
	/* border-color:rgb(71, 30, 30); */
	/* border-style: solid; */
	/* border-width:30px; */
}

#footer-image{
    height:50%;
    width:50%;
    border-radius: 50%;
    border-style:solid;
    border-color:#F67EA1;
    border-width:10px;
}

.footer {
    position:fixed;
    left:0;
    bottom:0;
    width: 100%;
    background-color:#40FFFA;
    color:white;
    text-align:center;
}

.first-div {
    margin-left:-10px;
}

/* .add-padding {
    padding-left:100px;
    padding-right:100px;
    color:green;
} */

/* body {
	background-color: #E3E3E3;
	font-size: 12px;
}  */

/* h1, 
h2, 
h3, 
h4, 
h5, 
h6 {
    color: #4f4f4f;
    font-family: "BebasNeue", sans-serif;
    margin: 0;
    font-weight: normal;
} */

/* #header .leftbox {
float: left;
display: inline;
} */

/* #header .rightbox {
float: right;
display: inline;
width: 200px;
} */

.form-signin-heading {
/* font-size:20px; */
/* color:aliceblue; */
display:inline-block;
/* padding-right:40px; */
}

.header {
    /* left:0;
    bottom:0; */
    position:relative;
    width: 100%;
    right:50px;
    height:100px;
    /* background-color:#40FFFA; */
    color:white;
    text-align:right;
    padding:-10px;
    display:inline-block;
    box-sizing:border-box;
    padding:10px;
}

.form-control {
    text-align:inline-block;
}

.center-content {
    background-color: azure;
    /* padding:-10px; */
}

.type-palindrome {
    background-color: yellow;
}

